--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
     //gson
     implementation 'com.google.code.gson:gson:2.10.1'
-
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
+    //circleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
